# nornickel-hack_LLM-witnesses

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/eval/: render_report.py  run_eval.py
backend/eval/goldsets/: tof_expected.json
backend/hypofactory/: config.py  domain_profile.py  schemas.py  tracing.py
backend/hypofactory/analysis/: registry.py  tails_analyzer.py
backend/hypofactory/api/: app.py  store.py
backend/hypofactory/export/: csv_json.py  docx_report.py  pdf_report.py
backend/hypofactory/ingestion/: docx_hypotheses.py  excel_tails.py  pdf_books.py  vision_ocr.py
backend/hypofactory/llm/: client.py  embeddings.py  rerank.py
backend/hypofactory/pipeline/: feedback_learning.py  generator.py  graph.py  query_builder.py  ranker.py  rejected_filter.py  roadmap.py  target_spec.py  verification.py
backend/hypofactory/rag/: graph_viz.py  lightrag_setup.py  retrieve.py
backend/scripts/: build_corpus.py  check_llm.py  index_lightrag.py
backend/tests/: test_excel_parser.py  test_pipeline_smoke.py
configs/: api.docker.json  api.json
frontend/: Dockerfile  app.py  pyproject.toml
frontend/components/: export_buttons.py  graph_view.py  hypothesis_card.py  progress.py
scripts/: backup_data.py  backup_data.sh  restore_data.py  restore_data.sh
