[project]
name = "hypofactory"
version = "0.1.0"
description = "Фабрика гипотез — генерация и приоритизация исследовательских гипотез (хакатон Норникель)"
requires-python = ">=3.11"
dependencies = [
    # LLM / RAG
    "lightrag-hku",
    "yandex-ai-studio-sdk",
    "langgraph",
    "pydantic",
    "tenacity",
    "python-dotenv",
    # эмбеддинги локально (bge-m3)
    "sentence-transformers",
    # ingestion
    "pymupdf",
    "python-docx",
    "openpyxl",
    "pandas",
    # UI / визуализация
    "streamlit",
    "pyvis",
    "networkx",
]

[dependency-groups]
dev = [
    "pytest",
    "deepeval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/hypofactory"]
