[project]
name = "hypofactory"
version = "0.1.0"
description = "Фабрика гипотез — генерация и приоритизация исследовательских гипотез (хакатон Норникель)"
requires-python = ">=3.11"
dependencies = [
    # LLM / RAG
    "lightrag-hku",
    "yandex-ai-studio-sdk",
    "langgraph",
    "pydantic",
    "tenacity",
    "python-dotenv",
    "httpx",
    # эмбеддинги, локальный провайдер по умолчанию (EMBEDDING_PROVIDER=local);
    # torch явно версией с CUDA (см. [tool.uv.sources] ниже) — иначе uv sync
    # молча ставит CPU-сборку, и bge-m3 считается на CPU (в разы медленнее)
    "sentence-transformers",
    "torch",
    # векторный индекс LightRAG (vector_storage=QdrantVectorDBStorage)
    "qdrant-client",
    # история сессий (api/store.py)
    "asyncpg",
    # ingestion
    "pymupdf",
    "python-docx",
    "openpyxl",
    "pandas",
    # API
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # трейс вызовов LLM (self-hosted Langfuse, docker-compose.yml)
    "langfuse",
    # UI / визуализация (Streamlit-фронт делает другой человек отдельно;
    # pyvis/networkx нужны бэку для генерации HTML-графа гипотезы)
    "pyvis",
    "networkx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "deepeval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/hypofactory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

# CUDA-сборка torch (RTX 5070 Ti на машине разработки) — без этого uv ставит
# torch+cpu из PyPI, и локальный эмбеддер (bge-m3) считает на CPU в разы медленнее.
# Если разработка идёт без NVIDIA GPU — удалить этот блок, uv возьмёт CPU-сборку.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
